--- a/react-blog/public/index.html
+++ b/react-blog/public/index.html
@@ -11,7 +11,7 @@
   </head>
 <body>
 
-  <div id="root">This is index.html</div>
+  <div id="root">
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
